2006-01-26  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        SVG shows up blank in WebKit+SVG
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6620

        * css/svg.css: default to width/height 100% for <svg>

2006-01-26  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        http://bugzilla.opendarwin.org/show_bug.cgi?id=6805
        Support constants in IDL files

        * bindings/scripts/CodeGeneratorJS.pm:
        If an interface has constants, generate a constructor
        object and add the constants as properties. Also add a
        getConstructor method to the interface object.
        
        * bindings/scripts/CodeGenerator.pm:
        * bindings/scripts/generate-bindings.pl:
        Add a --force-generation flag to force regeneration of files
        even though nothing has changed.
        
        * khtml/ecma/kjs_events.cpp:
        * khtml/ecma/kjs_events.h:
        Remove MutationEventConstructor and DOMMutationEvent,
        those are autogenerated now.
        
        * bindings/js/JSEvents.cpp:
        Include JSMutationEvent.cpp

        * khtml/ecma/kjs_window.cpp:        
        (KJS::Window::getValueProperty):
        * khtml/ecma/kjs_window.h:
        (KJS::Window::):
        Add MutationEvent property.
        
        * khtml/xml/MutationEvent.idl: Added.

2006-01-25  Alexander Kellett  <lypanov@kde.org>

        Reviewed by eseidel.

        Percentage values for width, height are not rendered correctly.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5331

        Create items for even empty paths to prevent an empty render tree.
        Calculate the viewport element on the fly rather than caching it,
        unless there is no context from which to calculate it. Call 
        notifyAttributeChange() on layout to fix usage of viewport
        percentages for lengths. Remove portion of code which appears to 
        do nothing but worsen the situation.
