@@ -1,3 +1,15 @@
+2006-01-26  Mitz Pettel  <opendarwin.org@mitzpettel.com>
+
+        Reviewed by Darin, committed by ap.
+        
+        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6278
+          REGRESSION: Incomplete repaint when table cell width changes during layout
+
+        * manual-tests/bugzilla-6278.html: Added.
+        * rendering/RenderTableSection.cpp:
+        (WebCore::RenderTableSection::setCellWidths): If during layout a cell changes from
+        not needing layout to needing layout, call repaintObjectsBeforeLayout on it.
+
 2006-01-26  Eric Seidel  <eseidel@apple.com>
 
         Reviewed by mjs.
